Fix image wrap

--- a/css/main.css
+++ b/css/main.css
@@ -30,5 +30,5 @@ figure {
 }
 
 figcaption {
-  padding .5em;
+  padding: .5em;
 }
